--- a/src/App.css
+++ b/src/App.css
@@ -158,3 +158,33 @@ button:hover {
 .modal-content div {
   margin: 10px 0;
 }
+
+.columns-container {
+  display: flex;
+}
+
+.column {
+  flex: 1;
+  margin: 0 10px;
+}
+
+.column > div {
+  margin-bottom: 20px;
+}
+
+.column h2 {
+  margin-bottom: 10px;
+}
+
+.column > div > h3 {
+  margin-bottom: 5px;
+}
+
+.scrollable {
+  height: 100px; /* Altura máxima de la columna */
+  overflow-y: auto; /* Agrega scroll vertical si es necesario */
+}
+
+.scroll-content {
+  padding-right: 20px; /* Asegura que el contenido no sea cubierto por el scroll */
+}
